--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.17",
+    "dotenv": "^17.2.3",
     "firebase": "^12.6.0",
     "openai": "^6.9.1",
     "react": "^19.2.0",
